2010-07-01  H.J. Lu  <hongjiu.lu@intel.com>

	AVX Programming Reference (June, 2010)
	* i386-dis.c (PREFIX_0FAE_REG_0): New.
	(PREFIX_0FAE_REG_1): Likewise.
	(PREFIX_0FAE_REG_2): Likewise.
	(PREFIX_0FAE_REG_3): Likewise.
	(PREFIX_VEX_3813): Likewise.
	(PREFIX_VEX_3A1D): Likewise.
	(prefix_table): Add PREFIX_0FAE_REG_0, PREFIX_0FAE_REG_1,
	PREFIX_0FAE_REG_2, PREFIX_0FAE_REG_3, PREFIX_VEX_3813 and
	PREFIX_VEX_3A1D.
	(vex_table): Add PREFIX_VEX_3813 and PREFIX_VEX_3A1D.
	(mod_table): Add PREFIX_0FAE_REG_0, PREFIX_0FAE_REG_1,
	PREFIX_0FAE_REG_2, PREFIX_0FAE_REG_3 xsaveopt and rdrnd.

	* i386-gen.c (cpu_flag_init): Add CPU_XSAVEOPT_FLAGS,
	CPU_FSGSBASE_FLAGS, CPU_RDRND_FLAGS and CPU_F16C_FLAGS.
	(cpu_flags): Add CpuXsaveopt, CpuFSGSBase, CpuRdRnd and CpuF16C.

	* i386-opc.h (CpuXsaveopt): New.
	(CpuFSGSBase):Likewise.
	(CpuRdRnd): Likewise.
	(CpuF16C): Likewise.
	(i386_cpu_flags): Add cpuxsaveopt, cpufsgsbase, cpurdrnd and
	cpuf16c.

	* i386-opc.tbl: Add xsaveopt, rdfsbase, rdgsbase, rdrnd,
	wrfsbase, wrgsbase, vcvtph2ps and vcvtps2ph.
	* i386-init.h: Regenerated.
	* i386-tbl.h: Likewise.

2010-07-01  Sebastian Andrzej Siewior  <bigeasy@linutronix.de>

	* ppc-opc.c (powerpc_opcodes): Revert deprecation of mfocrf, mtcrf
	and mtocrf on EFS.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* maxq-dis.c: Delete file.
	* Makefile.am: Remove references to maxq.
	* configure.in: Likewise.
	* disassemble.c: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* mep-dis.c: Regenerate.

2010-06-28  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* arm-disc.c (parse_insn_neon):  Fix Neon alignment syntax.

2010-06-27  Alan Modra  <amodra@gmail.com>

	* arc-dis.c (arc_sprintf): Delete set but unused variables.
	(decodeInstr): Likewise.
	* dlx-dis.c (print_insn_dlx): Likewise.
	* h8300-dis.c (bfd_h8_disassemble_init): Likewise.
	* maxq-dis.c (check_move, print_insn): Likewise.